# oxide-lms

./: .env.example  .gitignore  App.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  compose.yaml  rustfmt.toml
client/oxide-admin/: Cargo.toml  index.html  manifest.json  tailwind.config.js
client/oxide-admin/src/: main.rs  router.rs
client/oxide-admin/src/component/: account_list.rs  header.rs  mod.rs  quick_action.rs  sidebar.rs  stats.rs
client/oxide-admin/src/page/: home.rs
client/oxide-dean/: Cargo.toml  Trunk.toml
client/oxide-dean/src/: router.rs
client/oxide-dean/src/component/: header.rs
client/oxide-dean/src/page/: faculty.rs
client/oxide-i18n/locales/: en.json  mod.rs
client/oxide-i18n/src/: lib.rs
client/oxide-ui/: Cargo.toml
client/oxide-ui/src/: lib.rs
client/oxide-ui/src/page/: login.rs  not_found.rs
client/oxide-web/: Cargo.toml  index.html  manifest.json
client/oxide-web-common/: Cargo.toml
client/oxide-web-common/src/: auth.rs
client/oxide-web/src/: router.rs
client/oxide-web/src/component/: header.rs
client/oxide-web/src/page/: dean_online.rs  home.rs  programs.rs
client/oxide-web/src/page/student/: profile.rs
examples/wasm-plugin-rust/: grading.wit
migrations/: 20260129132453_oxide_init_migration.sql
oxide-admin/: Cargo.toml  index.html
oxide-admin/src/: main.rs
oxide-api/: Cargo.toml
oxide-api/src/: main.rs  openapi.rs
oxide-api/src/dto/: auth.rs  user.rs
oxide-api/src/handler/: auth.rs  user.rs
oxide-business/: Cargo.toml
oxide-business/src/: error.rs  lib.rs
oxide-data/: Cargo.toml
oxide-data/src/: dto.rs  error.rs  manager.rs  repository.rs
oxide-dean/: index.html
oxide-dean/src/: main.rs  router.rs
oxide-dean/src/component/: header.rs
oxide-dean/src/page/: home.rs  mod.rs
oxide-domain/: Cargo.toml
oxide-domain/src/: model.rs
oxide-i18n/: Cargo.toml  build.rs
oxide-i18n/locales/: en.json
oxide-shared-types/: Cargo.toml
oxide-shared-types/src/: admin.rs  auth.rs
oxide-ui/: Cargo.toml
oxide-ui/src/component/: header.rs
oxide-ui/src/page/: mod.rs
oxide-web/: Cargo.toml  index.html
oxide-web/src/: main.rs  router.rs
oxide-web/src/component/: header.rs
oxide-web/src/page/: dean_online.rs  home.rs  login.rs  mod.rs
oxide-web/src/page/student/: profile.rs
server/oxide-api/: Cargo.toml  Dockerfile
server/oxide-api/src/: boot.rs  error.rs  main.rs  openapi.rs  state.rs
server/oxide-api/src/dto/: user.rs
server/oxide-api/src/handler/: auth.rs
server/oxide-api/src/user/: admin.rs  auth.rs  mod.rs
server/oxide-business/: Cargo.toml
server/oxide-business/src/: error.rs  event.rs  jwt.rs  lib.rs
server/oxide-business/src/notification/: ports.rs
server/oxide-business/src/profile/: handler.rs  mod.rs  service.rs
server/oxide-business/src/student/: service.rs
server/oxide-business/src/user/: service.rs
server/oxide-config/: Cargo.toml
server/oxide-config/src/: lib.rs
server/oxide-data/: Cargo.toml
server/oxide-data/src/: dto.rs  error.rs  lib.rs  manager.rs  repository.rs
server/oxide-data/src/profile/: mod.rs
server/oxide-data/src/user/: mod.rs
server/oxide-domain/: Cargo.toml
server/oxide-domain/src/: dto.rs  error.rs  event.rs  lib.rs  model.rs
server/oxide-domain/src/chat/: mod.rs  object.rs
server/oxide-domain/src/course/: course_status.rs  mod.rs
server/oxide-domain/src/crypto/: mod.rs
server/oxide-domain/src/organizational_unit/: mod.rs  object.rs  repository.rs
server/oxide-domain/src/profile/: event.rs  mod.rs  object.rs  repository.rs  service.rs
server/oxide-domain/src/student/: event.rs  mod.rs  repository.rs  service.rs
server/oxide-domain/src/user/: event.rs  mod.rs  object.rs  repository.rs  service.rs
server/oxide-domain/src/user/plugin/: guard.rs  hooks.rs  middleware.rs  mod.rs
server/oxide-infrastructure/: Cargo.toml
server/oxide-infrastructure/src/: error.rs  jwt.rs  lib.rs
server/oxide-infrastructure/src/auth/: argon2.rs  mod.rs
server/oxide-infrastructure/src/outbox/: mod.rs  postgres.rs
server/oxide-macros/: Cargo.toml
server/oxide-macros/src/: lib.rs
server/oxide-wasm-provider/: Cargo.toml
server/oxide-wasm-provider/wit/: interceptor.wit
