[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ООО 'Аксион Тех' <info@axion-tech.ru>", "Суздальцев Денис Сергеевич <suzdaltsevdenis@icloud.com>"]
license = "EULA"

[workspace]
resolver = "2"
members = ["oxide-api", "oxide-business","oxide-data","oxide-domain","oxide-web"]

[workspace.dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = "0.8.11"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.228", features = ["derive"]}
validator = { version = "0.20.0", features = ["derive"] }
uuid = {version = "1.20.0", features = ["v4", "serde"]}
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "time"]}
time = "0.3.46"
thiserror = "2.0.18"
jsonwebtoken = "10.3.0"
actix-web = "4.12.1"
actix-cors = "0.7.1"
actix-web-httpauth = "0.8.2"
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }