[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Suzdaltsev Denis <suzdaltsevdenis@icloud.com>"]
license = "Apache-2.0"


[profile.release]
panic = "unwind"
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "debuginfo"


[profile.client-release]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z"
strip = "symbols"


[workspace]
resolver = "2"
members = [
    "server/oxide-api",
    "server/oxide-business",
    "server/oxide-data",
    "server/oxide-domain",
    "server/oxide-wasm-provider",
    "server/oxide-macros",
    "server/oxide-infrastructure",
    "client/oxide-admin",
    "client/oxide-dean",
    "client/oxide-i18n",
    "client/oxide-ui",
    "client/oxide-web",
    "client/oxide-web-common",
    "oxide-shared-types"
]

[workspace.dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = "0.8.11"
reqwasm = "0.5.0"

leptos_meta = "0.8.5"
leptos_i18n = {version = "0.6.0", features = ["csr"]}
leptos_i18n_build = {version =  "0.6.0", features = ["csr"] }


dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "time"] }
time = { version = "0.3.46", features = ["serde"] }
async-trait = "0.1.89"
email_address = "0.2.9"


syn = "2.0.114"
quote = "1.0.44"


tracing = "0.1.44"
tracing-subscriber = "0.3.22"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.18"
mockall = "0.14.0"
rstest = "0.26.1"


axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }


aes-gcm = "0.10.3"
argon2 = "0.5.3"
zeroize = { version = "1.8.2", features = ["derive"] }
jsonwebtoken = "10.3.0"


utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }


wasmtime = "41.0.3"
wit-bindgen = "0.52.0"

[workspace.lints.clippy]
pedantic = "warn"
must_use_candidate = "allow"
unwrap_used = "deny"
perf = "warn"
panic = "deny"
todo = "warn"
unreachable = "warn"
enum_glob_use = "deny"
explicit_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
