[package]
name = "oxide-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
dotenvy.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
serde.workspace = true
validator.workspace = true
oxide-data = {path = "../oxide-data"}
sqlx.workspace = true
