[package]
name = "oxide-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
dotenvy.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
validator.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true