[package]
name = "oxide-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
leptos_i18n.workspace = true
leptos_router.workspace = true

oxide-web-common = {path = "../oxide-web-common"}
oxide-i18n = {path = "../oxide-i18n"}

[build-dependencies]
leptos_i18n_build.workspace = true