[package]
name = "oxide-web-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
leptos_router.workspace = true

reqwasm.workspace = true

serde.workspace = true

oxide-shared-types = { path = "../../oxide-shared-types", features = ["default"] }
