[package]
name = "oxide-web"
version.workspace = true
edition.workspace = true

[dependencies]
leptos.workspace = true
leptos_router.workspace = true
leptos_i18n.workspace = true
leptos_meta.workspace = true
reqwasm.workspace = true
serde.workspace = true

oxide-web-common = {path = "../oxide-web-common"}
oxide-ui = {path="../oxide-ui"}
oxide-i18n = {path = "../oxide-i18n"}

[build-dependencies]
leptos_i18n_build.workspace = true