[package]
name = "oxide-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
validator.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

oxide-data = { path = "../oxide-data" }
oxide-business = { path = "../oxide-business" }
oxide-shared-types = { path = "../../oxide-shared-types", features = ["full"] }
oxide-domain = { path = "../oxide-domain" }
oxide-infrastructure = { path = "../oxide-infrastructure" }
time.workspace = true
uuid.workspace = true