[package]
name = "oxide-business"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true

tokio.workspace = true
wasmtime.workspace = true
wit-bindgen.workspace = true
async-trait.workspace = true

tracing.workspace = true

oxide-domain = { path = "../oxide-domain", features = ["full"] }

[dev-dependencies]
tokio.workspace = true
mockall.workspace = true
rstest.workspace = true
