[package]
name = "oxide-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sqlx.workspace = true
async-trait.workspace = true
oxide-domain = {path="../oxide-domain"}
oxide-business = {path="../oxide-business"}
thiserror.workspace = true
serde.workspace = true
