[package]
name = "oxide-domain"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
thiserror.workspace = true
email_address.workspace = true

zeroize.workspace = true
oxide-macros = {path = "../oxide-macros", features = ["zeroize"]}

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true