[package]
name = "oxide-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
thiserror.workspace = true
email_address.workspace = true

zeroize.workspace = true
oxide-macros = {path = "../oxide-macros", features = ["zeroize"]}

mockall = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }

[features]
default = []
test-util = ["mockall", "rstest"]
full = ["test-util"]

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
