[package]
name = "oxide-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oxide-domain = {path="../oxide-domain"}

jsonwebtoken.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true

argon2.workspace = true
