[package]
name = "oxide-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oxide-domain = {path="../oxide-domain"}

jsonwebtoken.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde_json.workspace = true

argon2.workspace = true
async-trait.workspace = true
log = "0.4.29"
