[package]
name = "oxide-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
zeroize = {workspace = true, optional = true}

[features]
default = []
